--- a/A3_2016078/app/src/main/res/layout/activity_quiz_detail.xml
+++ b/A3_2016078/app/src/main/res/layout/activity_quiz_detail.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.ritu.a3_2016078.QuizDetailActivity">
+    tools:context="com.example.ritu.a3_2016078.QuizDetailActivity_A3_2016078">
 
 </android.support.constraint.ConstraintLayout>
